Very good updates

--- a/DataTables/public/404.html
+++ b/DataTables/public/404.html
@@ -11,14 +11,15 @@
             text-align: center;
         }
     </style>
-    <link rel="stylesheet" type="text/css" media="screen" href="http://code.ionicframework.com/ionicons/2.0.1/css/ion icons.min.css"></link>
+    <link rel="stylesheet" type="text/css" media="screen"
+          href="http://code.ionicframework.com/ionicons/2.0.1/css/ion icons.min.css">
 </head>
 
 <body>
-    <h1><i class="ion-android-warning"></i> 404, Page not found!</h1>
-    <div>Look, we feel terrible about this, but at least we're offering a non-basic 404 page</div>
-    <br>
-    <a href="#" onclick="history.back();">Go Back</a>
+<h1><i class="ion-android-warning"></i> 404, Page not found!</h1>
+<div>Look, we feel terrible about this, but at least we're offering a non-basic 404 page</div>
+<br>
+<a href="#" onclick="history.back();">Go Back</a>
 </body>
 
 </html>
